fix tag alignment and add margin on main documents

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -40,6 +40,10 @@ body {
   font-family: var(--ff-base);
 }
 
+main {
+  margin-bottom: 40px;
+}
+
 picture,
 img,
 svg {
